@startuml StoragePackage
skinparam classAttributeIconSize 0
hide circle

package storage {

    class Storage {
        - {static} DEFAULT_REPO : String
        - fileSystemManager : FileSystemManager
        - noteSerializer : NoteSerializer
        - repoName : String
        - repoList : ArrayList<String>

        + Storage(rootPath : String)
        + init() : void
        + readCurrRepo() : String
        + readTagsLine() : List<String>
        + createStorageFile(note : Note) : void
        + loadConfig() : void
        + updateConfig(newRepo : String) : void
        + updateTags(tags : List<String>) : void
        + load() : ArrayList<Note>
        + save(notes : List<Note>) : void
        + changeRepo(newRepo : String) : void
        + createRepo(repoName : String) : void
        + deleteStorageFile(filename : String) : void
    }

    class FileSystemManager {
        - {static} CONFIG_FILE : String
        - {static} TAGS_FILE : String
        - {static} REPO_NOTES : String
        - {static} REPO_ARCHIVE : String
        - {static} REPO_INDEX : String
        - rootPath : Path

        + FileSystemManager(rootPath : String)
        + getRootPath() : Path
        + createRootFolder() : void
        + createConfigFile(defaultRepo : String) : void
        + createRepoStructure(repoName : String) : boolean
        + createNoteFile(noteFilename : String, noteBody : String, repoName : String) : void
        + validateRepoStructure(repoName : String, expectedFiles : List<String>) : void
        + validateTagsFile() : void
        + getIndexPath(repoName : String) : Path
        + getNotesPath(repoName : String) : Path
        + getConfigPath() : Path
    }

    class NoteSerializer {
        - {static} LIST_DELIM : String

        + loadNotes(indexPath : Path, notesDir : Path) : ArrayList<Note>
        + saveNotes(notes : List<Note>, indexPath : Path) : void
        + getExpectedFilenames(indexPath : Path) : List<String>
    }

    class Note {
    }

    ' Associations
    Storage --> FileSystemManager : uses
    Storage --> NoteSerializer : uses
    NoteSerializer --> Note : serializes / deserializes
    FileSystemManager --> Path : file operations
}

@enduml